--- a/web/index.html
+++ b/web/index.html
@@ -62,6 +62,10 @@
     <script src="static/js/controller/overHead.js"></script>
     <script src="static/js/controller/API.js"></script>
     <script src="static/js/controller/APIview.js"></script>
+    <script src="static/js/controller/buyRecord.js"></script>
+    <script src="static/js/controller/detail.js"></script>
+    <script src="static/js/controller/Account.js"></script>
+    <script src="static/js/controller/Modify.js"></script>
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog m150">
             <div class="modal-content">
