--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="static/js/libs/slick.min.js"></script>
     <script src="static/js/libs/angular.js"></script>
     <script src="static/js/libs/angular-ui-router.js"></script>
+    <script src="static/js/libs/angular-animate.js"></script>
     <script src="static/js/libs/md5.js"></script>
     <script src="static/js/common/main.js"></script>
     <script src="static/js/common/check.js"></script>
