--- a/web/index.html
+++ b/web/index.html
@@ -181,6 +181,7 @@
                     <div class="admin" ng-click="guanli(dd.appid)">管理</div>
                 </div>
             </div>
+            <div class="contain1">我的API <span ui-sref="API.view" ng-click="Crawler_close()">进入管理</span></div>
         </div>
     </script>
     <script type="text/ng-template" id="overSet.html">
